--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,7 @@
+<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+<script src="{{ url_for('static', filename='script.js') }}"></script>
+<link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
